RD-2219 permanent generation space is no longer available in java 8